--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 北方摩卡
-SEOTitle: 北方摩卡 | Blog
+title: BFmoka
+SEOTitle: BFmoka | Blog
 header-img: img/post-bg-rwd.jpg
 description: "每个胜利背后都有许多尝试"
 keyword: "博客"
